<resources>
    <string name="app_name">사장님!넵</string>

    <string name="login_ltd">Copyright kraftm Ltd.All right reserved</string>
    <!--EmployerMainActivityTest String-->
    <string name="main_text05">매장직원 관리</string>
    <string name="main_text06">구인</string>
    <string name="main_text07">지시사항</string>
    <string name="main_text08">간편메뉴</string>
    <string name="main_text09">알림</string>
    <string name="main_text10">면접지원</string>
    <string name="main_text10_1">근로계약서</string>
    <string name="main_text11">결재현황</string>
    <string name="main_text12">매장관리</string>

    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="channel_1">근무자 출근/퇴근 알림</string>
    <string name="channel_description">근무자 출근/퇴근 알림</string>
    <string name="channel_2">할일 승인/완료 및 급여명세서 알림</string>
    <string name="channel_3">근무자 근무시간 알림</string>
    <string name="channel_4">근무신청 / 매장초대</string>
<!--    <string name="channel_5">매장 공지 알림</string>-->

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>


    <string name="title_home">홈</string>
    <string name="title_dashboard">할일</string>
    <string name="title_calandar">캘린더</string>
    <string name="title_workstatus">근무현황</string>
    <string name="title_more">더보기</string>

    <string name="approval_tv01">결\n재\n대\n기\n중</string>
    <string name="approval_tv02">승\n인</string>
    <string name="approval_tv03">반\n려</string>

    <string name="check_validation_String">※ 비밀번호는 숫자, 특수문자, 영문자가 적어도 하나씩은 포함되어야 합니다.\n사용가능한 특수문자: !, @, #, ^, &amp;, *, (, ) </string>
    <string name="password_editText_hint">8~16자 영문/숫자/특수문자 조합으로 입력</string>

    <string name="view_tv"><u>전문보기</u></string>

    <string name="store_category01">일반음식점</string>
    <string name="store_category02">편의점</string>
    <string name="store_category03">피시방</string>
    <string name="store_category04">테마파크</string>
    <string name="store_category05">호텔숙박</string>
    <string name="store_category06">패스트푸드</string>
    <string name="store_category07">아이스크림\n&amp;\n디저트</string>
    <string name="store_category08">호프/일반주점</string>
    <string name="store_category09">피트니스</string>
    <string name="store_category10">패밀리레스토랑</string>

    <string name="contract_tv01">매번 수기로 작성하던 근로계약서,\n시간이 지나면 어디있는지 찾기도 어려우셨죠.\n사장님!넵에서 편리하게 작성하고\n언제든지 근무자에게 전달도 가능합니다.\n<b>온라인 근로계약은 종이계약서와 법적효력이 동일합니다.</b></string>
    <string name="contract_tv02"><u>전문보기</u></string>
    <string name="close_txt"><u>닫기</u></string>
</resources>