<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/loginbox_round"
    android:orientation="vertical"
    tools:context=".bottomsheet.StoreDivisionPopActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="10dp">
            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="5dp"
                android:layout_centerInParent="true"
                app:cardBackgroundColor="#dcdcdc"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="매장분류"
        android:textColor="#000000"
        android:textSize="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|center"
        android:text="카테고리"
        android:textColor="#000000"
        android:textSize="16dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:cardBackgroundColor="#f2f2f2"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:orientation="vertical"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/select_cate01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/store_category01"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#f2f2f2" />

                    <TextView
                        android:id="@+id/select_cate02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/store_category02"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#f2f2f2" />

                    <TextView
                        android:id="@+id/select_cate03"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/store_category03"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f2f2f2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/select_cate04"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/store_category04"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#f2f2f2" />

                    <TextView
                        android:id="@+id/select_cate05"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/store_category05"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#f2f2f2" />

                    <TextView
                        android:id="@+id/select_cate06"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/store_category06"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f2f2f2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/select_cate07"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/store_category07"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#f2f2f2" />

                    <TextView
                        android:id="@+id/select_cate08"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/store_category08"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#f2f2f2" />

                    <TextView
                        android:id="@+id/select_cate09"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/store_category09"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f2f2f2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/select_cate10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/store_category10"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#f2f2f2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#f2f2f2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:textColor="#000000" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

</LinearLayout>